plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.github.bitsapling'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'cn.dev33:sa-token-spring-boot3-starter:1.34.0'
    implementation 'cn.dev33:sa-token-dao-redis-jackson:1.34.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    runtimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'commons-validator:commons-validator:1.7'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'org.apache.commons:commons-compress:1.22'
    implementation 'org.jetbrains:annotations:23.1.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'at.favre.lib:bcrypt:0.9.0'
    implementation 'com.konghq:unirest-java:3.14.1'
    implementation 'me.tongfei:progressbar:0.9.5'
    implementation 'com.dampcake:bencode:1.4'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.1'
    implementation 'org.redisson:redisson-hibernate-6:3.19.3'
    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20220608.1'
    implementation 'org.apache.commons:commons-pool2'
    implementation 'com.rometools:rome:1.18.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {

    manifestContentCharset 'utf-8'
    metadataCharset 'utf-8'
    archivesBaseName = 'Sapling' // jar包名
    manifest {
        attributes "Manifest-Version": 1.0,
                'Start-Class': 'com.github.bitsapling.sapling.SaplingApplication' //  springboot项目的启动类
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}
